# pyleco-extras

./: AUTHORS.txt  CHANGELOG.md  LICENSE  README.md  codecov.yml  environment.yml  pyproject.toml
.github/: environment.yml
.github/workflows/: pyleco_extras_CI.yml  tests.yml
pyleco_extras/actors/: motor_controller.py  tmc_motor_actor.py
pyleco_extras/actors/tmc/: motor_utils.py  motors.py
pyleco_extras/directors/: analyzing_director.py  motor_director.py  tmc_motor_director.py
pyleco_extras/gui/DataLogger/: DataLogger.pyw  DataLoggerBase.py  DataLoggerRemote.pyw  DataLoggerViewer.pyw
pyleco_extras/gui/DataLogger/data/: DataLogger.ui  Settings.py  Settings.ui  SettingsRemote.ui  load_file.py  multiPlotWidget.py  plotWidget.py  settings_remote.py  singlePlotWidget.py
pyleco_extras/gui/LECOViewer/: leco_viewer.pyw
pyleco_extras/gui/LogLogger/: LogLogger.pyw
pyleco_extras/gui/LogLogger/data/: LogLogger.ui  settings.py
pyleco_extras/gui/Starter/: StarterGUI.pyw
pyleco_extras/gui/Starter/data/: Settings.py  StarterGUI.ui  icon-license.txt
pyleco_extras/gui/Starter/tasks/: dying_task.py  example_motor.py  task.py
pyleco_extras/gui/data_logger/: DataLogger.pyw  DataLoggerRemote.pyw  DataLoggerViewer.pyw  data_logger.py  data_logger_base.py  data_logger_remote.py  data_logger_viewer.py
pyleco_extras/gui/data_logger/data/: DataLogger.ui  data_logger_listener.py  load_file.py  multi_plot_widget.py  plot_widget.py  settings.py  single_plot_widget.py
pyleco_extras/gui/leco_viewer/: LECOViewer.pyw  leco_viewer.py  settings.py
pyleco_extras/gui/log_logger/: LogLogger.pyw  log_logger.py
pyleco_extras/gui/starter_gui/: StarterGUI.pyw
pyleco_extras/gui/starter_gui/data/: Settings.ui  settings.py
pyleco_extras/gui/starter_gui/tasks/: example_motor.py  instrument.py  printer.py  randomPublisher.py
pyleco_extras/gui_utils/: base_main_window.py  base_settings.py
pyleco_extras/tools/: topic_collector.py
pyleco_extras/utils/: base_main_window.py  extended_publisher.py  republisher.py  units.py
tests/actors/tmc/: test_motor_utils.py  test_motors.py
tests/directors/: test_analyzing_director.py  test_motor_director.py
tests/gui/data_logger/: test_data_logger_base.py
tests/gui/data_logger/data/: test_dataLogger_listener.py
tests/utils/: test_extended_publisher.py  test_republisher.py
